--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Business
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/businessdatabase
+spring.datasource.username=user
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
