repository and refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=Business
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL15Dialect
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/businessdatabase
 spring.datasource.username=user
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+#spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
