--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.postgresql:postgresql:42.7.2'
+	runtimeOnly 'com.h2database:h2'
+	implementation 'org.modelmapper:modelmapper:3.0.0'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
+
 
 
 tasks.named('test') {
