--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,6 +4,13 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+
+
+
+
 #spring.application.name=Business
 #
 #spring.datasource.url=jdbc:postgresql://localhost:5432/businessdatabase
