--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,13 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.7.2'
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.modelmapper:modelmapper:3.0.0'
-	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+	testImplementation 'com.h2database:h2'
+	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
+
+
 
 
 
