--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.username=user
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.root=INFO
+logging.file.name=logs/application.log
+logging.file.max-size=10MB
+logging.file.max-history=30
